luxtensor/build_errors.txt
cargo :     Checking luxtensor-rpc v0.1.0 (D:\ve
nera\cardano\moderntensor\moderntensor\luxtensor
\crates\luxtensor-rpc)
At line:1 char:1
+ cargo check --package luxtensor-rpc 2>&1 | 
Out-File -Encoding utf8 bu ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (   
     Checking lu...\luxtensor-rpc):String) [],  
   RemoteException
    + FullyQualifiedErrorId : NativeCommandErro 
   r
 
error[E0432]: unresolved imports 
`luxtensor_storage::CheckpointManager`, 
`luxtensor_storage::CHECKPOINT_INTERVAL`
 --> crates\luxtensor-rpc\src\handlers\checkpoin
t.rs:5:39
  |
5 | use luxtensor_storage::{BlockchainDB, 
CheckpointManager, CHECKPOINT_INTERVAL};
  |                                       
^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^ no 
`CHECKPOINT_INTERVAL` in the root
  |                                       |
  |                                       no 
`CheckpointManager` in the root

warning: unexpected `cfg` condition value: 
`reqwest`
  --> 
crates\luxtensor-rpc\src\load_balancer.rs:95:11
   |
95 |     #[cfg(feature = "reqwest")]
   |           ^^^^^^^^^^^^^^^^^^^ help: remove 
the condition
   |
   = note: no expected values for `feature`
   = help: consider adding `reqwest` as a 
feature in `Cargo.toml`
   = note: see <https://doc.rust-lang.org/nightl
y/rustc/check-cfg/cargo-specifics.html> for 
more information about checking conditional 
configuration
   = note: `#[warn(unexpected_cfgs)]` on by 
default

warning: unexpected `cfg` condition value: 
`reqwest`
   --> 
crates\luxtensor-rpc\src\load_balancer.rs:111:19
    |
111 |             #[cfg(feature = "reqwest")]
    |                   ^^^^^^^^^^^^^^^^^^^ 
help: remove the condition
    |
    = note: no expected values for `feature`
    = help: consider adding `reqwest` as a 
feature in `Cargo.toml`
    = note: see <https://doc.rust-lang.org/night
ly/rustc/check-cfg/cargo-specifics.html> for 
more information about checking conditional 
configuration

error[E0308]: mismatched types
    --> crates\luxtensor-rpc\src\handlers\stakin
g.rs:372:34
     |
 372 |                     locks.insert(*addr, 
(amount, unlock_ts, bonus));
     |                           ------ ^^^^^ 
expected `[u8; 20]`, found `Vec<u8>`
     |                           |
     |                           arguments to 
this method are incorrect
     |
     = note: expected array `[u8; 20]`
               found struct `Vec<u8>`
note: method defined here
    --> C:\Users\Admin\.rustup\toolchains\stable
-x86_64-pc-windows-msvc\lib/rustlib/src/rust\lib
rary\std\src\collections\hash\map.rs:1207:12
     |
1207 |     pub fn insert(&mut self, k: K, v: V) 
-> Option<V> {
     |            ^^^^^^

error[E0599]: no method named `get_receipt` 
found for struct `Arc<BlockchainDB>` in the 
current scope
   --> crates\luxtensor-rpc\src\tx_rpc.rs:191:18
    |
191 |         match db.get_receipt(&hash) {
    |                  ^^^^^^^^^^^ method not 
found in `Arc<BlockchainDB>`

error[E0277]: the size for values of type 
`[u8]` cannot be known at compilation time
   --> crates\luxtensor-rpc\src\tx_rpc.rs:192:21
    |
192 |             Ok(Some(receipt_bytes)) => {
    |                     ^^^^^^^^^^^^^ doesn't 
have a size known at compile-time
    |
    = help: the trait `Sized` is not 
implemented for `[u8]`
    = note: all local variables must have a 
statically known size

error[E0277]: the size for values of type 
`[u8]` cannot be known at compilation time
   --> crates\luxtensor-rpc\src\tx_rpc.rs:192:16
    |
192 |             Ok(Some(receipt_bytes)) => {
    |                ^^^^^^^^^^^^^^^^^^^ 
doesn't have a size known at compile-time
    |
    = help: the trait `Sized` is not 
implemented for `[u8]`
note: required by a bound in 
`std::prelude::v1::Some`
   --> C:\Users\Admin\.rustup\toolchains\stable-
x86_64-pc-windows-msvc\lib/rustlib/src/rust\libr
ary\core\src\option.rs:599:17
    |
599 | pub enum Option<T> {
    |                 ^ required by this bound 
in `std::prelude::v1::Some`
...
607 |     Some(#[stable(feature = "rust1", 
since = "1.0.0")] T),
    |     ---- required by a bound in this 
tuple variant

Some errors have detailed explanations: E0277, 
E0308, E0432, E0599.
For more information about an error, try `rustc 
--explain E0277`.
warning: `luxtensor-rpc` (lib) generated 2 
warnings
error: could not compile `luxtensor-rpc` (lib) 
due to 5 previous errors; 2 warnings emitted
